// Enabler proto 3 istedet for 2
syntax = "proto3";

// Stores Autogenerated code from .proto file
package si.stubs.review;

// With this line, I am saying that create multiple classes rather than a single class
option java_multiple_files = true;

import "google/protobuf/empty.proto";

// This is the request message where it takes an id to find data
message ReviewId {
  int32 review_id = 1;
}

message UserId {
  int32 user_id = 1;
}

message GameId {
  int32 game_id = 1;
}

message DeleteStatus {
  string message = 1;
}

// This is for sending reviews.
message Review {
  int32 reviewId = 1;
  int32 gameId = 2;
  int32 userId = 3;
  int32 visualScore = 4;
  int32 gameplayScore = 5;
  int32 soundScore = 6;
  string comment = 7;
  int64 createdTimestamp = 8;
  int64 updatedTimestamp = 9;
}

// This is for creating review.
message CreateReview {
  int32 gameId = 1;
  int32 userId = 2;
  int32 visualScore = 3;
  int32 gameplayScore = 4;
  int32 soundScore = 5;
  string comment = 6;
}

// This is for creating review.
message UpdateReview {
  int32 reviewId = 1;
  int32 gameId = 2;
  int32 userId = 3;
  int32 visualScore = 4;
  int32 gameplayScore = 5;
  int32 soundScore = 6;
  string comment = 7;
}

// This defines our service for the target folder
service ReviewService {
  rpc getReviewById(ReviewId) returns (Review);
  rpc getAllReviewsByUserId(UserId) returns (stream Review);
  rpc getAllReviewsByGameId(GameId) returns (stream Review);
  rpc getAllReviews(google.protobuf.Empty) returns (stream Review);
  rpc createReview(CreateReview) returns (Review);
  rpc updateReview(Review) returns (Review);
  rpc deleteReview(ReviewId) returns (DeleteStatus);
}
